--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="print2">
-        <div class="triangle"><img src="./img/Vector 1.svg" alt=""></div>
+        <div class="triangle"><img src="./img/Vector 1.svg" alt="" class="triangle2"></div>
         <div class="ellipse"><img src="./img/Ellipse 1.svg" alt=""></div>
         <div class="contact">
             <span class="website">nasvai.com</span>
